# serial_comm_tool

./: Cargo.toml  Makefile  README.md  build.rs
src/: main.rs  main.rs.bak  main.rs.example
ui/: appwindow.slint  side_bar.slint
